fixed: clipping

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -81,3 +81,6 @@ a {
 
 
 
+  .clipping {
+   clip-path: polygon(0 0, 0 100vh, 47vw 100vh, 22vw 0)
+  }
